# agenttalks

./: .gitignore  CLAUDE.md  Procfile  README.md  TASK.md  azure.yaml  dapr.yaml  dapr.yml  docker-compose-tracing.yml  package-lock.json  package.json  pom.xml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: content-api-instructions.md  dashboard-instructions.md  definition-of-done.md  podcast-api-instructions.md  reader-api-instructions.md
.github/prompts/: generate-plan.md  generate-plan.prompt.md  implement-plan.prompt.md
.github/workflows/: ci.yml  content-api-ci.yml  content-ci.yml  copilot-setup-steps.yml  podcast-api-ci.yml  podcasts-ci.yml  reader-api-ci.yml  reader-ci.yml  textextraction-ci.yml
.github/workflows/instructions/: content-api-instructions.md
.quarkus/cli/plugins/: quarkus-cli-catalog.json
.windsurf/rules/: common.md  content-api.md  reader-api.md
apps/content/: README.md  pyproject.toml
apps/content-api/: README.md  pom.xml
apps/content/.dapr/: config.yaml
apps/content/.dapr/resources/: pubsub.yaml
apps/content/src/agenttalks/content/: __init__.py  cli.py  config.py  forms.py  models.py  persistence.py  server.py
apps/content/src/agenttalks/content/eventbus/: __init__.py  client.py  events.py
apps/content/src/agenttalks/content/graph/: __init__.py  context.py  mutation.py  query.py
apps/content/tests/agenttalks/content/: test_eventbus_client.py  test_graph.py  test_models.py  test_server.py
apps/dashboard/: .env.example  .gitignore  houdini.config.js  package-lock.json  package.json  schema.graphql
apps/dashboard/src/: auth.ts  client.ts
apps/podcast-api/: README.md  pom.xml
apps/podcasts/: README.md  pyproject.toml
apps/podcasts/.dapr/: config.yaml
apps/reader/: README.md  pyproject.toml  ruff.toml
apps/reader-api/: README.md  pom.xml
apps/reader/.dapr/: config.yaml
apps/reader/.dapr/resources/: secretstore.yaml
apps/reader/src/agenttalks/reader/: __init__.py  agent.py  cli.py  server.py  shared.py  telemetry.py
apps/reader/src/agenttalks/reader/eventbus/: __init__.py  events.py
apps/reader/src/agenttalks/reader/workflow/: __init__.py  activities.py  runtime.py
apps/reader/src/agenttalks/reader/workflow/activities/: __init__.py  content.py  download.py  summarization.py
apps/reader/tests/agenttalks/reader/: test_server.py
content-api/: README.md  pom.xml
dashboard/: package-lock.json  package.json  svelte.config.js
docs/: gmail-setup.md
docs/architecture/: 01-introduction-and-goals.md  02-constraints.md  03-context-and-scope.md  04-solution-strategy.md  05-building-block-view.md  06-runtime-view.md  07-deployment-view.md  08-crosscutting-concepts.md  README.md
docs/architecture/crosscutting/: 01-workflows.md  02-telemetry.md
docs/architecture/diagrams/: architecture-diagrams.drawio
docs/implementation-plans/: merge-apis.md
docs/product/: 01-purpose-and-background.md  02-business-context.md  03-approach-and-objectives.md  04-personas.md  05-functional-requirements.md  06-non-functional-requirements.md  07-assumptions-and-dependencies.md  08-acceptance-criteria.md  09-long-term-vision.md  README.md
features/: podcast.feature  submissions.feature
infra/: app-infra.bicepparam  main.bicep  main.bicepparam  main.parameters.json  shared-infra.bicepparam
infra/app/: content-api.bicep  dashboard.bicep  keycloak.bicep  podcast-api.bicep  rabbitmq.bicep  reader-api.bicep  temporal.bicep
infra/core/database/: postgres.bicep
infra/core/host/: container-apps-environment.bicep  container-apps.bicep  container-registry.bicep
infra/core/monitor/: applicationinsights.bicep  loganalytics.bicep  monitoring.bicep
infra/core/openai/: openai.bicep
input/: .gitignore  Robocast.drawio  metrics.txt  pilot.txt  podcast-script-2.txt  system_prompt.txt
libs/textextraction/: README.md  pyproject.toml
libs/textextraction/src/agenttalks/textextraction/: __init__.py  docx.py  html.py  pdf.py
libs/textextraction/tests/agenttalks/textextraction/: test_docx.py  test_html.py  test_pdf.py
libs/textextraction/tests/agenttalks/textextraction/test_files/: sample-file.docx  sample-file.md  sample-file.txt
podcast-api/: README.md  pom.xml
reader-api/: README.md  pom.xml
tests/: create_submission.http
(+391 files in other folders)
