[project]
name = "agenttalks-textextraction"
version = "0.1.0"
description = "Text extraction for the agenttalks project"
readme = "README.md"
authors = [
    { name = "Willem Meints", email = "1550763+wmeints@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.25.5",
    "python-docx>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttalks"]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
]
